# SGI-Persistence

./: .codemeta.json  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  zenodo.json
.github/workflows/: tests.yml
archive/deprecated/: study_001a_sector_audit.py  study_001e_constraint_injection.py  study_001f_architectural_substitution.py  study_001g_mechanism_ablation.py  study_001m_reversibility_calculus.py  study_001n_replayability.py
archive/exploratory/: ablation_results.json  attractor_geometry_results.json  gauge_equivariance_results.json  gauge_geometry_results.json  organizational_freedom_results.json
archive/superseded/: organizational_bundle.py
data/canonical/: architectural_substitution_results.json  colony_sector_audit_results.json  constraint_injection_results.json  cross_domain_entanglement.json  dissociation_audit_results.json  entanglement_results.json  phase_002a_results.json  replayability_results.json  results.json  reversibility_calculus_results.json  sector_audit_results.json  sectoral_entanglement_results.json  (+1 more)
docs/: canonical_metrics.md  external_review_checklist.md  json_schema.md  migration_manifest.md  observability_gate.md  phase_005a_specification.md  project_status.md  publication_strategy.md  publication_triage.md  roadmap_phase003.md
schemas/: experiment_result.schema.json
scripts/: generate_all_figures.py  generate_tables.py  hash_artifacts.py
tests/: test_basis_invariance.py  test_connection_formalism.py  test_discrete_transport.py  test_figures.py  test_metric_consistency.py  test_reproducibility.py
(+205 files in other folders)
